fix: scrollbar styling

--- a/spacecake-app/src/styles/globals.css
+++ b/spacecake-app/src/styles/globals.css
@@ -122,16 +122,21 @@
     @apply bg-background text-foreground;
   }
 
-  *:hover::-webkit-scrollbar {
+  *::-webkit-scrollbar {
     @apply w-2.5 h-2.5;
-    opacity: 1;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    @apply rounded-full bg-border border-[1px] border-transparent border-solid bg-clip-padding;
+    visibility: hidden;
+    transition: visibility 0.2s ease;
+  }
+
+  *:hover::-webkit-scrollbar-thumb {
+    visibility: visible;
   }
 
   ::-webkit-scrollbar-track {
     @apply bg-transparent;
-  }
-
-  ::-webkit-scrollbar-thumb {
-    @apply rounded-full bg-border border-[1px] border-transparent border-solid bg-clip-padding;
   }
 }
